--- a/project.json
+++ b/project.json
@@ -10,7 +10,12 @@
       {
         "title": "Impression des pièces",
         "duration": 115200,
-        "content": "Télécharger les fichiers sources dans le dossier models.\n\nImprimer l'ensemble des pièces sur une imprimante 3D avec du filament ABS.\n\nVoici les paramètres à utiliser lors de la conception des pièces :\n\n*     Soft utilisé : CURA\n*     Plastique pour le prototype : ABS (plus solide que le PLA)\n*     Température extrusion : 230°C\n*     Température plateau : 90°C\n*     Type du plateau : verre (juste propre, sans aide d'accroche)\n*     Largeur de ligne : 0.3mm\n*     Taux de remplissage : 20%\n*     Épaisseur de la paroi : 1mm\n*     Épaisseur dessus/dessous : 0.6mm\n*     Motif d'impression : zig-Zag\n*     Vitesse d'impression : 60mm/s\n*    Vitesse de remplissage : 100mm/s\n*    Vitesse couche initiale : 30mm/s\n*    Adhérence du plateau : bordure\n*    Supports : activités\n*   Angle de supports : 65°\n\n"
+        "content": "Télécharger les fichiers sources dans le dossier models.\n\nImprimer l'ensemble des pièces sur une imprimante 3D avec du filament ABS.\n\nFabrication supports ou pièces 3D : 32 heures\n\n*  Supports en forme de \"T\" > environ 8 heures\n*  Supports en forme de \"L\" > environ 8 heures\n*  Supports en forme de \"Demi-rotules\" avec crans rectangulaires (par la suite trapézoïdaux) > 16 heures\n\nVoici les paramètres à utiliser lors de la conception des pièces :\n\n*     Soft utilisé : CURA\n*     Plastique pour le prototype : ABS (plus solide que le PLA)\n*     Température extrusion : 230°C\n*     Température plateau : 90°C\n*     Type du plateau : verre (juste propre, sans aide d'accroche)\n*     Largeur de ligne : 0.3mm\n*     Taux de remplissage : 20%\n*     Épaisseur de la paroi : 1mm\n*     Épaisseur dessus/dessous : 0.6mm\n*     Motif d'impression : zig-Zag\n*     Vitesse d'impression : 60mm/s\n*    Vitesse de remplissage : 100mm/s\n*    Vitesse couche initiale : 30mm/s\n*    Adhérence du plateau : bordure\n*    Supports : activités\n*   Angle de supports : 65°\n\n\n\n"
+      },
+      {
+        "title": "Assemblage",
+        "duration": 7200,
+        "content": "![](https://github.com/myhumankit/arceau-de-lit-de-voyage/blob/master/documents/---E--Arceau_de_voyage-MHK-Doc_et_Images-Arceau_de_voyage_eclatee.jpg)"
       }
     ]
   }
