--- a/project.json
+++ b/project.json
@@ -15,7 +15,15 @@
             {
                 "title": "Assemblage",
                 "duration": 7200,
-                "content": "![](https://github.com/myhumankit/arceau-de-lit-de-voyage/blob/master/documents/---E--Arceau_de_voyage-MHK-Doc_et_Images-Arceau_de_voyage_eclatee.jpg)"
+                "content": "Assembler les pièces sur les tiges aluminium.",
+                "media": [
+                    {
+                        "image": {
+                            "url": "https://github.com/myhumankit/arceau-de-lit-de-voyage/tree/master/images/Arceau_de_voyage-MHK-Doc_et_Images-Arceau_de_voyage_eclatee.jpg",
+                            "caption": "Arceau de voyage vue éclatée"
+                        }
+                    }
+                ]
             }
         ]
     }
