--- a/project.json
+++ b/project.json
@@ -19,7 +19,7 @@
                 "media": [
                     {
                         "image": {
-                            "url": "https://github.com/myhumankit/arceau-de-lit-de-voyage/tree/master/images/Arceau_de_voyage-MHK-Doc_et_Images-Arceau_de_voyage_eclatee.jpg",
+                            "url": "images/Arceau_de_voyage-MHK-Doc_et_Images-Arceau_de_voyage_eclatee.jpg",
                             "caption": "Arceau de voyage vue éclatée"
                         }
                     }
